@@ -1,4 +1,6 @@
 * Version 0.6.4
+    * Resolved SF Bug #1517979 and #1551076 - colinux-bridged-net-daemon.exe
+      and other net daemons crashes under heavy load. (Mitch Bradley)
     * colinux-daemon: Fix incorrect explaination in --help, for --remove-driver.
       SF Bug#1483449
     * Improved building 
